# autopurple

./: .env.bak  .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  debug_mcp.py  env.example  kv1.pem  pyproject.toml  setup.py
autopurple/: __init__.py  config.py  logging.py
autopurple/adapters/: __init__.py  pacu_adapter.py  scoutsuite_adapter.py
autopurple/adapters/mcp/: __init__.py  ccapi_client.py  cfn_client.py  docs_client.py  manager.py  stdio_client.py
autopurple/cli/: __init__.py  install.py  main.py  setup.py
autopurple/db/: __init__.py  connection.py  schema.sql
autopurple/models/: __init__.py  findings.py  remediation.py  runs.py  validations.py
autopurple/orchestrator/: __init__.py  mcp_claude_integration.py  pipeline.py  planner.py  validators.py
tests/: __init__.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_findings.py
